--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "solidity.compileUsingRemoteVersion": "v0.7.0+commit.9e61f92b"
+    "solidity.compileUsingRemoteVersion": "v0.7.1+commit.f4a555be",
+    "liveServer.settings.port": 5502
 }
