--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethers": "^5.0.14",
+    "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
     "standard": "^14.3.4",
