--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@nomiclabs/buidler-waffle": "^2.1.0",
     "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.1.0",
+    "diamond-util": "^1.0.7",
+    "ethereum-waffle": "^3.1.1",
     "ethers": "^5.0.14",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-alpha.57",
+    "prettier-plugin-solidity": "^1.0.0-alpha.58",
     "standard": "^14.3.4",
     "typescript": "^4.0.3"
   },
