--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-waffle": "^2.1.0",
+    "buidler-contract-sizer": "^1.0.2",
     "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
-    "diamond-util": "^1.0.7",
+    "diamond-util": "^1.0.8",
     "ethereum-waffle": "^3.1.1",
     "ethers": "^5.0.14",
     "husky": "^4.3.0",
