--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
   },
   "homepage": "https://github.com/aavegotchi/aavegotchi-contracts#readme",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.4.7",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.1.0",
-    "buidler-contract-sizer": "^1.0.2",
-    "buidler-gas-reporter": "^0.1.3",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "chai": "^4.2.0",
     "diamond-util": "^1.0.14",
-    "ethereum-waffle": "^3.1.1",
-    "ethers": "^5.0.14",
+    "dotenv": "^8.2.0",
+    "ethereum-waffle": "^3.1.2",
+    "ethers": "^5.0.19",
+    "hardhat": "^2.0.2",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.58",
