--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "standard": "^14.3.4",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "truffle-assertions": "^0.9.2"
+  }
 }
