--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.60",
+    "solidity-coverage": "^0.7.12",
     "standard": "^14.3.4",
     "typescript": "^4.0.5"
   },
