--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "diamond-util": "^1.1.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.2.0",
-    "ethers": "^5.0.20",
+    "ethers": "^5.0.21",
     "hardhat": "^2.0.3",
     "hardhat-contract-sizer": "^2.0.2",
     "husky": "^4.3.0",
-    "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-alpha.60",
+    "prettier": "^2.2.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
     "solidity-coverage": "^0.7.12",
     "standard": "^14.3.4",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "truffle-assertions": "^0.9.2"
