--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.1",
     "solidity-coverage": "^0.7.12",
     "standard": "^14.3.4",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "web3": "^1.3.4"
   },
   "dependencies": {
     "truffle-assertions": "^0.9.2"
