Added ledger signer library. Started upgrade-tickets script. Updated authentication on setERC1155Categories function

--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
   },
   "homepage": "https://github.com/aavegotchi/aavegotchi-contracts#readme",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "chai": "^4.2.0",
-    "diamond-util": "^1.1.0",
+    "@ethersproject/hardware-wallets": "file:../../npm/ethers.js/packages/hardware-wallets",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "diamond-util": "^1.1.1",
     "dotenv": "^8.2.0",
-    "ethereum-waffle": "^3.2.0",
-    "ethers": "^5.0.21",
-    "hardhat": "^2.0.9",
-    "hardhat-contract-sizer": "^2.0.2",
-    "husky": "^4.3.0",
-    "prettier": "^2.2.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.1",
-    "solidity-coverage": "^0.7.12",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.0.32",
+    "hardhat": "^2.1.1",
+    "hardhat-contract-sizer": "^2.0.3",
+    "husky": "^4.3.8",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.6",
+    "solidity-coverage": "^0.7.16",
     "standard": "^14.3.4",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "truffle-assertions": "^0.9.2"
