Fixed floating sleeves issue. Fixed issue with not enough gas when adding SVGs. Making branch in sync with svg-improvements branch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "solidity.compileUsingRemoteVersion": "v0.8.1+commit.df193b15",
-  "liveServer.settings.port": 5502
+"liveServer.settings.port": 5502,
+"editor.tabSize": 2
 }
