--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aavegotchi/aavegotchi-contracts#readme",
   "devDependencies": {
+    "@ethersproject/hardware-wallets": "file:../../npm/ethers.js/packages/hardware-wallets",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
@@ -32,10 +33,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.6",
     "solidity-coverage": "^0.7.16",
     "standard": "^14.3.4",
+    "truffle-assertions": "^0.9.2",
     "typescript": "^4.2.3"
   },
-  "dependencies": {
-    "@ethersproject/hardware-wallets": "file:../../npm/ethers.js/packages/hardware-wallets",
-    "truffle-assertions": "^0.9.2"
-  }
+  "dependencies": {}
 }
