--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "solidity.compileUsingRemoteVersion": "v0.8.1+commit.df193b15",
 "liveServer.settings.port": 5502,
 "editor.tabSize": 2,
-"solidity.defaultCompiler": "remote"
+"solidity.defaultCompiler": "remote",
+"cSpell.words": [
+  "Aaavegotchis",
+  "ethersproject"
+]
 }
