--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "truffle-assertions": "^0.9.2",
     "typescript": "^4.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-hid": "^2.1.1"
+  }
 }
