--- a/package.json
+++ b/package.json
@@ -18,23 +18,25 @@
   },
   "homepage": "https://github.com/aavegotchi/aavegotchi-contracts#readme",
   "devDependencies": {
-    "@ethersproject/hardware-wallets": "file:npm/ethers.js/packages/hardware-wallets",
+    "@ethersproject/hardware-wallets": "https://github.com/mudgen/ethers-ledger.git",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "diamond-util": "^1.1.1",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.0.32",
+    "ethers": "^5.1.0",
     "hardhat": "^2.1.2",
     "hardhat-contract-sizer": "^2.0.3",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.6",
+    "prettier-plugin-solidity": "^1.0.0-beta.7",
     "solidity-coverage": "^0.7.16",
     "standard": "^14.3.4",
     "truffle-assertions": "^0.9.2",
     "typescript": "^4.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-hid": "^2.1.1"
+  }
 }
