--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "hardhat": "^2.2.1",
     "node-hid": "^2.1.1"
   }
