Added hardhat task

--- a/hardhat.config.js.template
+++ b/hardhat.config.js.template
@@ -5,6 +5,7 @@ require('hardhat-contract-sizer')
 require('dotenv').config()
 require('solidity-coverage')
 require('./tasks/generateDiamondABI.js')
+require('./tasks/verifyFacet.js')
 
 // This is a sample Buidler task. To learn how to create your own go to
 // https://buidler.dev/guides/create-task.html
