--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
     "axios": "^0.21.1",
     "hardhat": "^2.2.1",
     "node-hid": "^2.1.1"
