--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "solidity-coverage": "^0.7.16",
     "standard": "^14.3.4",
     "truffle-assertions": "^0.9.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
