--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/hardhat": "^2.3.0",
     "chai": "^4.3.4",
     "diamond-util": "^1.1.1",
     "dotenv": "^8.2.0",
@@ -33,6 +35,7 @@
     "standard": "^14.3.4",
     "truffle-assertions": "^0.9.2",
     "ts-node": "^10.2.1",
+    "typechain": "^5.1.2",
     "typescript": "^4.2.3"
   },
   "dependencies": {
