--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/mocha": "^9.0.0",
     "axios": "^0.21.1",
     "hardhat": "^2.2.1",
-    "node-hid": "^2.1.1"
+    "node-hid": "^2.1.1",
+    "solc": "^0.8.7-fixed"
   }
 }
