--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noImplicitAny": true
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true
   },
   "include": ["./scripts", "./test", "*.ts", "**/*.ts", "./tasks"],
   "files": ["./hardhat.config.ts"]
