--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ethersproject/hardware-wallets": "https://github.com/mudgen/ethers-ledger.git",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^7.1.1",
+    "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.6",
@@ -28,7 +30,7 @@
     "diamond-util": "^1.1.1",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.4.2",
+    "ethers": "^5.4.7",
     "hardhat-contract-sizer": "^2.0.3",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
@@ -37,10 +39,10 @@
     "standard": "^14.3.4",
     "truffle-assertions": "^0.9.2",
     "ts-node": "^10.2.1",
+    "typechain": "^5.1.2",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@typechain/hardhat": "^2.3.0",
     "hardhat": "^2.2.1",
     "node-hid": "^2.1.1"
   }
