work on xp scripts
-add XP scripts
-patch equipWearables bug

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@ethersproject/experimental": "^5.4.0",
     "@ethersproject/hardware-wallets": "https://github.com/mudgen/ethers-ledger.git",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "axios": "^0.21.1",
