--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "axios": "^0.21.1",
+    "git-branch": "^2.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.5.0",
     "hardhat": "^2.2.1",
