--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/aavegotchi/aavegotchi-contracts#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.22",
@@ -29,7 +29,6 @@
     "chai": "^4.3.4",
     "diamond-util": "^1.1.1",
     "dotenv": "^8.2.0",
-    "ethereum-waffle": "^3.3.0",
     "ethers": "^5.5.4",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-docgen": "^1.3.0",
@@ -57,6 +56,7 @@
     "graphql": "^16.2.0",
     "graphql-request": "^3.5.0",
     "hardhat": "^2.2.1",
+    "hardhat-tracer": "^1.2.1",
     "node-hid": "^2.1.1",
     "solc": "^0.8.7-fixed"
   }
