--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "graphql": "^16.2.0",
     "graphql-request": "^3.5.0",
     "hardhat": "^2.2.1",
-    "hardhat-tracer": "^1.2.1",
+    "hardhat-tracer": "^2.0.0",
+    "merkletreejs": "^0.3.9",
     "node-hid": "^2.1.1",
     "solc": "^0.8.7-fixed"
   }
