--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ethersproject/experimental": "^5.4.0",
     "@ethersproject/hardware-wallets": "github:mudgen/ethers-ledger",
     "@layerzerolabs/solidity-examples": "^0.0.10",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
