--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@anders-t/ethers-ledger": "^1.0.4",
     "@ethersproject/experimental": "^5.4.0",
-    "@ethersproject/hardware-wallets": "github:mudgen/ethers-ledger",
+    "@ethersproject/hardware-wallets": "5.7.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
