--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/mocha": "^9.0.0",
     "alchemy-sdk": "^2.4.1",
     "axios": "^0.21.1",
+    "csv-parser": "^3.0.0",
     "git-branch": "^2.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.5.0",
