--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@anders-t/ethers-ledger": "^1.0.4",
     "@ethersproject/experimental": "^5.4.0",
     "@ethersproject/hardware-wallets": "github:mudgen/ethers-ledger",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
@@ -57,7 +58,7 @@
     "git-branch": "^2.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.5.0",
-    "hardhat": "^2.22.3",
+    "hardhat": "^2.22.5",
     "merkletreejs": "^0.3.9",
     "node-hid": "^2.1.1",
     "solc": "^0.8.7-fixed"
