--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
     "resolveJsonModule": true,
-    "noImplicitAny": true
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true
-  },
-  "include": ["./scripts", "./test", "*.ts", "**/*.ts", "./tasks"],
-  "files": ["./hardhat.config.ts"]
+    "esModuleInterop": true,
+    "target": "es2016",
+    "moduleResolution": "node"
+  }
 }
